--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
+    "@ngrx/effects": "^8.6.0",
+    "@ngrx/store": "^8.6.0",
+    "angular-tslint-rules": "^1.20.3",
     "bootstrap": "^3.4.1",
     "rxjs": "~6.4.0",
+    "rxjs-tslint-rules": "^4.28.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.20",
+    "@angular-devkit/build-angular": "^0.803.21",
     "@angular/cli": "^8.3.20",
     "@angular/compiler-cli": "~8.2.11",
     "@angular/language-service": "^8.2.14",
+    "@ngrx/store-devtools": "^8.6.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
